[gd_scene load_steps=3 format=3 uid="uid://ckqqfwg5ss7oj"]

[ext_resource type="Script" uid="uid://c2qitl2b1725u" path="res://loader.gd" id="1_dkhhw"]
[ext_resource type="Script" uid="uid://db30nr47b3dqt" path="res://loader_control.gd" id="2_ertqo"]

[node name="GDScript" type="Node"]

[node name="GDScriptLoader" type="Node" parent="."]
script = ExtResource("1_dkhhw")

[node name="GDScriptControls" type="AspectRatioContainer" parent="." node_paths=PackedStringArray("cached_label", "requested_label", "instantiated_label")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_ertqo")
cached_label = NodePath("MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer4/Label")
requested_label = NodePath("MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer4/Label2")
instantiated_label = NodePath("MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer4/Label3")

[node name="MarginContainer" type="MarginContainer" parent="GDScriptControls"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="GDScriptControls/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="GDScriptControls/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Button" type="Button" parent="GDScriptControls/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Request Scene_1"

[node name="Button3" type="Button" parent="GDScriptControls/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Unrequest Scene_1"

[node name="Button2" type="Button" parent="GDScriptControls/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Instantiate Scene_1"

[node name="Button4" type="Button" parent="GDScriptControls/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Clear Scenes"

[node name="VBoxContainer2" type="VBoxContainer" parent="GDScriptControls/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Button" type="Button" parent="GDScriptControls/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Request Scene_2"

[node name="Button3" type="Button" parent="GDScriptControls/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Unrequest Scene_2"

[node name="Button2" type="Button" parent="GDScriptControls/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Instantiate Scene_2"

[node name="MarginContainer2" type="MarginContainer" parent="GDScriptControls/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 25

[node name="HBoxContainer" type="HBoxContainer" parent="GDScriptControls/MarginContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="GDScriptControls/MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label" type="Label" parent="GDScriptControls/MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Cached:"
horizontal_alignment = 2

[node name="Label2" type="Label" parent="GDScriptControls/MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0.776471, 1)
text = "Requested:"
horizontal_alignment = 2

[node name="Label3" type="Label" parent="GDScriptControls/MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "Instantiated:"
horizontal_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="GDScriptControls/MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15

[node name="VBoxContainer4" type="VBoxContainer" parent="GDScriptControls/MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label" type="Label" parent="GDScriptControls/MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer4"]
layout_mode = 2
text = "None"

[node name="Label2" type="Label" parent="GDScriptControls/MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer4"]
layout_mode = 2
text = "None"

[node name="Label3" type="Label" parent="GDScriptControls/MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer4"]
layout_mode = 2
text = "None"

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8.2522)

[connection signal="update_text" from="GDScriptLoader" to="GDScriptControls" method="update"]
[connection signal="pressed" from="GDScriptControls/MarginContainer/HBoxContainer/VBoxContainer/Button" to="GDScriptLoader" method="request_scene" binds= ["res://scene_1.tscn"]]
[connection signal="pressed" from="GDScriptControls/MarginContainer/HBoxContainer/VBoxContainer/Button3" to="GDScriptLoader" method="cancel_request" binds= ["res://scene_1.tscn"]]
[connection signal="pressed" from="GDScriptControls/MarginContainer/HBoxContainer/VBoxContainer/Button2" to="GDScriptLoader" method="instantiate_scene" binds= ["res://scene_1.tscn"]]
[connection signal="pressed" from="GDScriptControls/MarginContainer/HBoxContainer/VBoxContainer/Button4" to="GDScriptLoader" method="clear"]
[connection signal="pressed" from="GDScriptControls/MarginContainer/HBoxContainer/VBoxContainer2/Button" to="GDScriptLoader" method="request_scene" binds= ["res://scene_2.tscn"]]
[connection signal="pressed" from="GDScriptControls/MarginContainer/HBoxContainer/VBoxContainer2/Button3" to="GDScriptLoader" method="cancel_request" binds= ["res://scene_2.tscn"]]
[connection signal="pressed" from="GDScriptControls/MarginContainer/HBoxContainer/VBoxContainer2/Button2" to="GDScriptLoader" method="instantiate_scene" binds= ["res://scene_2.tscn"]]
